--- a/contents/docs/classes/audio/index.mdx
+++ b/contents/docs/classes/audio/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Audio
-description: A decoded audio object that supports multiple simultaneous playbacks.
+description: A decoded audio object that supports multiple simultaneous playbacks. Access via the '' submodule.
 ---
 
 ## Constructor
