--- a/contents/docs/classes/camera/index.mdx
+++ b/contents/docs/classes/camera/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Camera
-description: Represents a 2D camera used for rendering.
+description: Represents a 2D camera used for rendering. Access via the '' submodule.
 ---
 
 ## Constructor
