--- a/contents/docs/classes/circle/index.mdx
+++ b/contents/docs/classes/circle/index.mdx
@@ -1,12 +1,13 @@
 ---
 title: Circle
-description: Represents a circle shape with position and radius.
+description: Represents a circle shape with position and radius. Access via the '' submodule.
 ---
 
 ## Constructor
 <div className="api-card">
 
 - <ApiSig name="Circle" params={[{ name: "pos", type: "Vec2" }, { name: "radius", type: "SupportsFloat" }]} returns="Circle" />
+- <ApiSig name="Circle" multiline params={[{ name: "x", type: "SupportsFloat" }, { name: "y", type: "SupportsFloat" }, { name: "radius", type: "SupportsFloat" }]} returns="Circle" />
 
 Represents a circle shape with position and radius.
 </div>
