--- a/contents/docs/classes/image-layer/index.mdx
+++ b/contents/docs/classes/image-layer/index.mdx
@@ -9,15 +9,15 @@ description: ImageLayer displays a single image as a layer. Access via the 'tile
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `opacity` |  | <code>float</code> |
-| `texture` |  | <code><a href="/docs/classes/texture">Texture</a></code> |
+| `opacity` | Layer opacity from 0.0 to 1.0. | <code>float</code> |
+| `texture` | Texture used by the image layer. | <code><a href="/docs/classes/texture">Texture</a></code> |
 
 ## Methods
 ---
 
-### Render
+### Draw
 <div className="api-card">
-<ApiSig name="render" returns="None" />
+<ApiSig name="draw" returns="None" />
 
 Draw the image layer.
 
