--- a/contents/docs/classes/input-action/index.mdx
+++ b/contents/docs/classes/input-action/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: InputAction
-description: Represents a single input trigger such as a key, mouse button, or gamepad control.
+description: Represents a single input trigger such as a key, mouse button, or gamepad control. Access via the '' submodule.
 ---
 
 ## Constructor
