--- a/contents/docs/classes/mask/index.mdx
+++ b/contents/docs/classes/mask/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Mask
-description: A collision mask for pixel-perfect collision detection.
+description: A collision mask for pixel-perfect collision detection. Access via the '' submodule.
 ---
 
 ## Constructor
