--- a/contents/docs/classes/orchestrator/index.mdx
+++ b/contents/docs/classes/orchestrator/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Orchestrator
-description: Timeline animator for Transform objects.
+description: Timeline animator for Transform objects. Access via the '' submodule.
 ---
 
 ## Constructor
