--- a/contents/docs/classes/polar-coordinate/index.mdx
+++ b/contents/docs/classes/polar-coordinate/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: PolarCoordinate
-description: PolarCoordinate models a polar coordinate pair.
+description: PolarCoordinate models a polar coordinate pair. Access via the '' submodule.
 ---
 
 ## Constructor
