--- a/contents/docs/classes/rect/index.mdx
+++ b/contents/docs/classes/rect/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Rect
-description: Represents a rectangle with position and size.
+description: Represents a rectangle with position and size. Access via the '' submodule.
 ---
 
 ## Constructor
