--- a/contents/docs/classes/sheet-strip/index.mdx
+++ b/contents/docs/classes/sheet-strip/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: SheetStrip
-description: A descriptor for one horizontal strip (row) in a sprite sheet.
+description: A descriptor for one horizontal strip (row) in a sprite sheet. Access via the '' submodule.
 ---
 
 ## Constructor
