--- a/contents/docs/classes/text-properties/index.mdx
+++ b/contents/docs/classes/text-properties/index.mdx
@@ -9,14 +9,14 @@ description: TextProperties holds styling for text objects on the map. Access vi
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `align` |  | <code><a href="/docs/manual/constants#align">Align</a></code> |
-| `bold` |  | <code>bool</code> |
-| `color` |  | <code><a href="/docs/classes/color">Color</a></code> |
-| `font_family` |  | <code>str</code> |
-| `italic` |  | <code>bool</code> |
-| `kerning` |  | <code>bool</code> |
-| `strikethrough` |  | <code>bool</code> |
-| `text` |  | <code>str</code> |
-| `underline` |  | <code>bool</code> |
-| `wrap` |  | <code>bool</code> |
-| `pixel_size` |  | <code>int</code> |
+| `align` | Horizontal text alignment. | <code><a href="/docs/manual/constants#align">Align</a></code> |
+| `bold` | Bold style flag. | <code>bool</code> |
+| `color` | Text color. | <code><a href="/docs/classes/color">Color</a></code> |
+| `font_family` | Font family name. | <code>str</code> |
+| `italic` | Italic style flag. | <code>bool</code> |
+| `kerning` | Kerning enabled flag. | <code>bool</code> |
+| `pixel_size` | Font size in pixels. | <code>int</code> |
+| `strikethrough` | Strikethrough style flag. | <code>bool</code> |
+| `text` | Text content. | <code>str</code> |
+| `underline` | Underline style flag. | <code>bool</code> |
+| `wrap` | Whether text wrapping is enabled. | <code>bool</code> |
