--- a/contents/docs/functions/renderer/index.mdx
+++ b/contents/docs/functions/renderer/index.mdx
@@ -36,20 +36,16 @@ _**Args**_
 
 ## Draw
 <div className="api-card">
-<ApiSig name="draw" multiline params={[{ name: "texture", type: "Texture" }, { name: "transform", type: "Any", default: "None" }, { name: "src", type: "Any", default: "None" }]} returns="None" />
+<ApiSig name="draw" multiline params={[{ name: "texture", type: "Texture" }, { name: "transform", type: "Any", default: "None" }, { name: "anchor", type: "Any", default: "None" }, { name: "pivot", type: "Any", default: "None" }]} returns="None" />
 
-Render a texture with the specified transform and source rectangle.
+Render a texture.
 
 _**Args**_
 
 - `texture` : The texture to render.
-- `transform` : The transform (position, rotation, scale, anchor, pivot). Defaults to identity transform.
-- `src` : The source rectangle from the texture. Defaults to entire texture if not specified.
-
-_**Raises**_
-
-- `TypeError` : If arguments are not of expected types.
-- `RuntimeError` : If renderer is not initialized.
+- `transform` : The transform (position, rotation, scale).
+- `anchor` : The anchor point (0.0-1.0). Defaults to top left (0, 0).
+- `pivot` : The rotation pivot (0.0-1.0). Defaults to center (0.5, 0.5).
 
 </div>
 
@@ -98,9 +94,11 @@ Read pixel data from the renderer within the specified rectangle.
 _**Args**_
 
 - `src` : The rectangle area to read pixels from. Defaults to entire renderer if None.
+
 _**Returns**_
 
 `PixelArray` : An array containing the pixel data.
+
 _**Raises**_
 
 - `RuntimeError` : If reading pixels fails.
