--- a/contents/guides/implementing-shaders/uniforms/index.mdx
+++ b/contents/guides/implementing-shaders/uniforms/index.mdx
@@ -2,7 +2,7 @@
 title: Uniforms
 ---
 
-As described in the [What is a Shader?](./what-is-a-shader/) page, uniform shaders simply are data that is constant for a single draw call, sent from the CPU to the GPU.
+As described in the [What is a Shader?](./what-is-a-shader/) page, uniforms are simply data that is constant for a single draw call, sent from the CPU to the GPU.
 In Kraken, uniform data can be stored and sent to the GPU using `ShaderUniform`-inherited objects.
 
 ## Creating a Uniform Buffer
