--- a/contents/guides/using-the-renderer/drawing-shapes/index.mdx
+++ b/contents/guides/using-the-renderer/drawing-shapes/index.mdx
@@ -11,7 +11,7 @@ A `Rect` object stores x, y, width, and height values.
 For example, let's draw a 50x30 rectangle with its top left corner placed at (100, 100).
 ```py
 rect = kn.Rect(100, 100, 50, 30)
-kn.draw.rect(rect, color=kn.color.WHITE)
+kn.draw.rect(rect, color=kn.Color.WHITE)
 ```
 
 <p style={{marginBottom: 0}}><i>Result:</i></p>
@@ -22,10 +22,12 @@ Alongside rectangles, we can also draw circles, lines, points, and polygons.
 Lines can be great for **raycasts** or **debug guides**, and points could be used for **collision test spots** or **spawn locations**.
 ```py
 # Draw a green line from (0, 0) to (200, 200)
-kn.draw.line(((0, 0), (200, 200)), color=kn.color.GREEN)
+line = kn.Line(0, 0, 200, 200)
+kn.draw.line(line, kn.Color.GREEN)
 
 # Draw a yellow point/pixel at (400, 300)
-kn.draw.point((400, 300), color=kn.color.YELLOW)
+point = kn.Vec2(400, 300)
+kn.draw.point(point, kn.Color.YELLOW)
 ```
 
 ## Clear, Draw, Present!
@@ -35,8 +37,8 @@ If something covers another shape unexpectedly, check the order of your draw cal
 while kn.window.is_open():
     ...
     kn.renderer.clear()
-    kn.draw.rect((20, 20, 100, 100), color=kn.color.GREEN)
-    kn.draw.rect((60, 60, 100, 100), color=kn.color.ORANGE)
+    kn.draw.rect(kn.Rect(20, 20, 100, 100), kn.Color.GREEN)
+    kn.draw.rect(kn.Rect(60, 60, 100, 100), kn.Color.ORANGE)
     kn.renderer.present()
 ```
 
