--- a/contents/docs/classes/audio-stream/index.mdx
+++ b/contents/docs/classes/audio-stream/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: AudioStream
-description: A streaming audio object for single-instance playback of large audio files.
+description: A streaming audio object for single-instance playback of large audio files. Access via the '' submodule.
 ---
 
 ## Constructor
