--- a/contents/docs/classes/event/index.mdx
+++ b/contents/docs/classes/event/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Event
-description: Represents a single input event such as keyboard, mouse, or gamepad activity.
+description: Represents a single input event such as keyboard, mouse, or gamepad activity. Access via the '' submodule.
 ---
 
 
