--- a/contents/docs/classes/map/index.mdx
+++ b/contents/docs/classes/map/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Map
-description: Map represents a loaded TMX map and provides access to its layers and tilesets. Access via the 'tilemap' submodule.
+description: A TMX map with access to its layers and tilesets. Access via the 'tilemap' submodule.
 ---
 
 ## Constructor
@@ -8,7 +8,7 @@ description: Map represents a loaded TMX map and provides access to its layers a
 
 - <ApiSig name="Map" returns="Map" />
 
-Map represents a loaded TMX map and provides access to its layers and tilesets.
+A TMX map with access to its layers and tilesets.
 </div>
 
 ## Properties
@@ -16,20 +16,28 @@ Map represents a loaded TMX map and provides access to its layers and tilesets.
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `background_color` |  | <code><a href="/docs/classes/color">Color</a></code> |
-| `bounds` |  | <code><a href="/docs/classes/rect">Rect</a></code> |
-| `hex_side_length` |  | <code>float</code> |
-| `layers` |  | <code>LayerList</code> |
-| `map_size` |  | <code><a href="/docs/classes/vec2">Vec2</a></code> |
-| `orientation` |  | <code><a href="/docs/manual/constants#maporientation">MapOrientation</a></code> |
-| `render_order` |  | <code><a href="/docs/manual/constants#maprenderorder">MapRenderOrder</a></code> |
-| `stagger_axis` |  | <code><a href="/docs/manual/constants#mapstaggeraxis">MapStaggerAxis</a></code> |
-| `stagger_index` |  | <code><a href="/docs/manual/constants#mapstaggerindex">MapStaggerIndex</a></code> |
-| `tile_sets` |  | <code>TileSetList</code> |
-| `tile_size` |  | <code><a href="/docs/classes/vec2">Vec2</a></code> |
+| `background_color` | Map background color. | <code><a href="/docs/classes/color">Color</a></code> |
+| `bounds` | Map bounds in pixels. | <code><a href="/docs/classes/rect">Rect</a></code> |
+| `hex_side_length` | Hex side length for hex maps. | <code>float</code> |
+| `layers` | LayerList of layers in the map. | <code>list[<a href="/docs/classes/layer">Layer</a>]</code> |
+| `map_size` | Map dimensions in tiles. | <code><a href="/docs/classes/vec2">Vec2</a></code> |
+| `orientation` | Map orientation enum. | <code><a href="/docs/manual/constants#maporientation">MapOrientation</a></code> |
+| `render_order` | Tile render order enum. | <code><a href="/docs/manual/constants#maprenderorder">MapRenderOrder</a></code> |
+| `stagger_axis` | Stagger axis enum for staggered/hex maps. | <code><a href="/docs/manual/constants#mapstaggeraxis">MapStaggerAxis</a></code> |
+| `stagger_index` | Stagger index enum for staggered/hex maps. | <code><a href="/docs/manual/constants#mapstaggerindex">MapStaggerIndex</a></code> |
+| `tile_sets` | TileSetList of tilesets used by the map. | <code>list[<a href="/docs/classes/tile-set">TileSet</a>]</code> |
+| `tile_size` | Size of tiles in pixels. | <code><a href="/docs/classes/vec2">Vec2</a></code> |
 
 ## Methods
 ---
+
+### Draw
+<div className="api-card">
+<ApiSig name="draw" returns="None" />
+
+Draw all layers.
+
+</div>
 
 ### Load
 <div className="api-card">
@@ -40,13 +48,5 @@ Load a TMX file from path.
 _**Args**_
 
 - `tmx_path` : Path to the TMX file to load.
-
-</div>
-
-### Render
-<div className="api-card">
-<ApiSig name="render" returns="None" />
-
-Render all layers.
 
 </div>
