--- a/contents/docs/classes/sprite/index.mdx
+++ b/contents/docs/classes/sprite/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Sprite
-description: Abstract base class for drawable game objects with a texture and transform.
+description: Abstract base class for drawable game objects with a texture and transform. Access via the '' submodule.
 ---
 
 ## Constructor
@@ -18,7 +18,6 @@ Abstract base class for drawable game objects with a texture and transform.
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `clip` | Source rectangle for texture sampling (None = full texture). | <code>Any</code> |
 | `texture` | The sprite's texture. | <code><a href="/docs/classes/texture">Texture</a></code> |
 | `transform` | The sprite's transform. | <code><a href="/docs/classes/transform">Transform</a></code> |
 | `velocity` | The sprite's velocity. | <code><a href="/docs/classes/vec2">Vec2</a></code> |
