--- a/contents/docs/classes/tile-set/index.mdx
+++ b/contents/docs/classes/tile-set/index.mdx
@@ -9,18 +9,18 @@ description: TileSet represents a collection of tiles and associated metadata. A
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `columns` |  | <code>int</code> |
-| `first_gid` |  | <code>int</code> |
-| `last_gid` |  | <code>int</code> |
-| `margin` |  | <code>int</code> |
-| `name` |  | <code>str</code> |
-| `spacing` |  | <code>int</code> |
-| `terrains` |  | <code><a href="/docs/classes/tile-set">TileSet</a>.TerrainList</code> |
-| `texture` |  | <code><a href="/docs/classes/texture">Texture</a></code> |
-| `tile_count` |  | <code>int</code> |
-| `tile_offset` |  | <code><a href="/docs/classes/vec2">Vec2</a></code> |
-| `tile_size` |  | <code><a href="/docs/classes/vec2">Vec2</a></code> |
-| `tiles` |  | <code><a href="/docs/classes/tile-set">TileSet</a>.TileSetTileList</code> |
+| `columns` | Number of tile columns in the source image. | <code>int</code> |
+| `first_gid` | First global tile id (GID) in this tileset. | <code>int</code> |
+| `last_gid` | Last global tile id (GID) in this tileset. | <code>int</code> |
+| `margin` | Pixel margin around the source image. | <code>int</code> |
+| `name` | Tileset name. | <code>str</code> |
+| `spacing` | Pixel spacing between tiles in the source image. | <code>int</code> |
+| `terrains` | TerrainList of terrain definitions. | <code>list[<a href="/docs/classes/tile-set">TileSet</a>.Terrain]</code> |
+| `texture` | Source texture for the tileset. | <code><a href="/docs/classes/texture">Texture</a></code> |
+| `tile_count` | Total number of tiles in the tileset. | <code>int</code> |
+| `tile_offset` | Per-tile offset applied when rendering. | <code><a href="/docs/classes/vec2">Vec2</a></code> |
+| `tile_size` | Size of tiles in pixels. | <code><a href="/docs/classes/vec2">Vec2</a></code> |
+| `tiles` | TileSetTileList of tile metadata entries. | <code>list[<a href="/docs/classes/tile-set">TileSet</a>.Tile]</code> |
 
 ## Methods
 ---
