--- a/contents/docs/classes/vec2/index.mdx
+++ b/contents/docs/classes/vec2/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Vec2
-description: Vec2 represents a 2D vector.
+description: A 2D vector representing Cartesian coordinates. Access via the '' submodule.
 ---
 
 ## Constructor
@@ -10,7 +10,7 @@ description: Vec2 represents a 2D vector.
 - <ApiSig name="Vec2" params={[{ name: "value", type: "SupportsFloat" }]} returns="Vec2" />
 - <ApiSig name="Vec2" params={[{ name: "x", type: "SupportsFloat" }, { name: "y", type: "SupportsFloat" }]} returns="Vec2" />
 
-Vec2 represents a 2D vector.
+A 2D vector representing Cartesian coordinates.
 </div>
 
 ## Properties
@@ -18,6 +18,11 @@ Vec2 represents a 2D vector.
 
 | Name | Description | Type |
 | --- | --- | --- |
+| `DOWN` | `Vec2(0.000000, 1.000000)` | <code>ClassVar[<a href="/docs/classes/vec2">Vec2</a>]</code> |
+| `LEFT` | `Vec2(-1.000000, 0.000000)` | <code>ClassVar[<a href="/docs/classes/vec2">Vec2</a>]</code> |
+| `RIGHT` | `Vec2(1.000000, 0.000000)` | <code>ClassVar[<a href="/docs/classes/vec2">Vec2</a>]</code> |
+| `UP` | `Vec2(0.000000, -1.000000)` | <code>ClassVar[<a href="/docs/classes/vec2">Vec2</a>]</code> |
+| `ZERO` | `Vec2(0.000000, 0.000000)` | <code>ClassVar[<a href="/docs/classes/vec2">Vec2</a>]</code> |
 | `angle` | Return the vector angle in radians. | <code>float</code> |
 | `length` | Return the magnitude of this Vec2. | <code>float</code> |
 | `length_squared` | Return the squared magnitude of this Vec2. | <code>float</code> |
